# mailchannels-python-sdk

./: .gitignore  AGENTS.md  LICENSE  README.md  SKILLS.md  pyproject.toml
.github/workflows/: ci.yml  online-tests.yml  publish.yml
docs/: API_COVERAGE.md  API_REFERENCE.md  LEARNINGS.md  PLAN.md  WISHLIST.md
examples/: __init__.py  async_email.py  attachments.py  cloudflare_dkim.py  custom_headers.py  custom_http_client.py  dkim.py  domain_checks.py  error_handling.py  metrics.py  queue_email.py  send_email.py  sub_accounts.py  suppressions.py  templates.py  unsubscribe.py  usage.py  webhooks.py
scripts/: check_openapi_drift.py  generate_api_coverage.py  generate_api_reference.py  run_consumer_typing.py  smoke_wheel_install.py
src/mailchannels/: __init__.py  client.py  exceptions.py  http_client.py  http_client_async.py  http_protocols.py  query.py  response.py  routes.py  version.py
src/mailchannels/check_domain/: __init__.py
src/mailchannels/dkim/: __init__.py  dkim.py  types.py
src/mailchannels/domain_checks/: __init__.py  domain_checks.py  types.py
src/mailchannels/emails/: __init__.py  emails.py  types.py
src/mailchannels/metrics/: __init__.py  metrics.py  types.py
src/mailchannels/sub_accounts/: __init__.py  sub_accounts.py  types.py
src/mailchannels/suppressions/: __init__.py  suppressions.py  types.py
src/mailchannels/usage/: __init__.py  types.py  usage.py
src/mailchannels/webhooks/: __init__.py  types.py  webhooks.py
tests/: conftest.py  test_api_coverage_report.py  test_api_reference.py  test_dkim.py  test_domain_checks.py  test_email_payload_negative.py  test_emails.py  test_errors.py  test_examples.py  test_http_clients.py  test_metrics.py  test_online_api.py  test_online_crud.py  test_openapi_contract.py  test_openapi_drift.py  test_openapi_request_contract.py  test_query.py  test_readme_examples.py  test_response_config.py  test_routes.py  test_sub_accounts.py  test_suppressions.py  test_usage.py  test_webhooks.py
typing_tests/: consumer_project.py
