[project]
name = "mailchannels"
version = "0.1.0"
description = "Python SDK for the MailChannels Email API."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "MailChannels" }]
dependencies = [
    "eval-type-backport>=0.2,<1; python_version < '3.10'",
    "pydantic>=2.6,<3",
    "requests>=2.31,<3",
    "typing-extensions>=4.9,<5",
]

[project.optional-dependencies]
async = ["httpx>=0.27,<1"]
dev = [
    "mypy>=1.10,<2",
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "respx>=0.21,<1",
    "ruff>=0.5,<1",
    "types-requests>=2.31,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mailchannels"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "online: tests that call the live MailChannels Email API",
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.9"
files = ["src/mailchannels"]
strict = false
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true

[tool.uv]
package = true
